[level 0] Title: 배열 만들기 6, Time: 32.65 ms, Memory: 138 MB -BaekjoonHub