@@ -1,15 +1,16 @@
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
+
 
 class Solution {
     public int[] solution(int[] arr) {
-        List<Integer> stk = new ArrayList<>();
-        for (int j : arr) {
-            if (stk.isEmpty()) stk.add(j);
-            else if (stk.get(stk.size() - 1).equals(j)) stk.remove(stk.size() - 1);
-            else stk.add(j);
+        Deque<Integer> stk = new ArrayDeque<>();
+        for (int i : arr) {
+            if (!stk.isEmpty() && stk.peekLast() == i) {
+                stk.removeLast();
+            } else {
+                stk.addLast(i);
+            }
         }
-        if(stk.isEmpty()) return new int[]{-1};
-        return stk.stream().mapToInt(Integer::intValue).toArray();
+        return stk.isEmpty() ? new int[]{-1} : stk.stream().mapToInt(Integer::intValue).toArray();
     }
 }
